--- a/bem/assets/css/style.css
+++ b/bem/assets/css/style.css
@@ -161,8 +161,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 12px;
-    padding-right: 24px;
+    padding-right: 12px;
     margin-bottom: 28px;
 }
 .toggle{
@@ -217,7 +216,8 @@ body{
 .cardBox{
     position: relative;
     width: 100%;
-    padding: 24px;
+    padding: 12px;
+    padding-top: 24px;
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-gap: 48px;
@@ -256,11 +256,12 @@ body{
 .cardBox .card:hover .iconBox{
     color: var(--yellow);
 }
-/*----daftarbidang----*/
+/*----tabel----*/
 .details{
     position: relative;
     width: 100%;
-    padding: 24px;
+    padding: 12px;
+    padding-top: 24px;
     margin-top: 12px;
 }
 #dashboard .details{
@@ -270,14 +271,17 @@ body{
 }
 
 #bidang .details,
-#proker .details{
+#proker .details,
+#anggota .details{
     display: block;
 }
 
-.details .daftarbidang{
+.details .daftarproker,
+#dashboard .details .daftarbidang,
+.details .dataproker,
+.details .daftar{
     position: relative;
-    align-items: flex-start;
-    display: grid;
+    display: block;
     min-height: 500px;
     background: var(--white);
     padding: 24px;
@@ -287,7 +291,7 @@ body{
 .details .cardHeader{
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    margin-bottom: 0;
 }
 .cardHeader h2{
     font-weight: 600;
@@ -311,42 +315,58 @@ body{
     text-align: center;
 }
 .details .daftarbidang table tr,
-.details .daftarproker table tr{
+.details .daftarproker table tr,
+.details .dataproker table tr,
+.details .daftar table tr{
     color: var(--black1);
     border-bottom: 1px solid rgba(0,0,0,0.1);
 }
 .details .daftarbidang table tr:last-child,
-.details .daftarproker table tr:last-child{
+.details .daftarproker table tr:last-child,
+.details .dataproker table tr:last-child,
+.details .daftar table tr:last-child{
     border-bottom: none;
 }
 .details .daftarbidang table tbody tr:hover,
-.details .daftarproker table tbody tr:hover{
+.details .daftarproker table tbody tr:hover,
+.details .dataproker table tbody tr:hover,
+.details .daftar table tbody tr:hover{
     background: var(--blue);
     color: var(--white);
 }
 .details .daftarbidang table tr td,
-.details .daftarproker table tr td{
+.details .daftarproker table tr td,
+.details .dataproker table tr td,
+.details .daftar table tr td{
     padding: 8px;
 }
 .details .daftarbidang table tbody tr td:nth-child(1),
 .details .daftarbidang table tbody tr td:nth-child(3),
-.details .daftarproker table tbody tr td:nth-child(1),
-.details .daftarproker table tbody tr td:nth-child(3),
-.details .daftarproker table tbody tr td:nth-child(4){
+.details .daftarproker table tbody tr td,
+.details .dataproker table tbody tr td,
+.details .daftar table tbody tr td{
     text-align: center;
 }
 
-/*----Daftar kepanitiaan---*/
-.details .daftarproker{
-    position: relative;
-    display: grid;
-    align-content: flex-start;
-    min-height: 500px;
-    background: var(--white);
-    padding: 24px;
-    box-shadow: 0 7px 25px rgba(0,0,0,0.08);
-    border-radius: 8px;
+/*table anggota*/
+#anggota .details .daftar table tbody tr td:nth-child(2){
+    text-align: start;
 }
+
+/*table bidang*/
+#bidang .details .daftar table tbody tr td:nth-child(2),
+#bidang .details .daftar table tbody tr td:nth-child(4){
+    text-align: start;
+}
+/*table proker*/
+#proker .details .daftar table tbody tr td:nth-child(2),
+.details .daftarproker table tbody tr td:nth-child(2),
+.details .dataproker table tbody tr td:nth-child(2){
+    text-align: start;
+}
+
+
+/*----Daftar kepanitiaan---*/
 .status.delivered{
     padding: 2px 4px;
     background: #09a32b;
@@ -383,3 +403,79 @@ body{
     text-align: right;
 }
 
+/* ====================== Responsive Design ========================== */
+@media (max-width: 991px) {
+    .navigation {
+      left: -300px;
+    }
+    .navigation.active {
+      width: 300px;
+      left: 0;
+    }
+    .main {
+      width: 100%;
+      left: 0;
+    }
+    .main.active {
+      left: 300px;
+    }
+    #dashboard .cardBox {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    #dashboard .details {
+        grid-template-columns: 1fr;
+      }
+  }
+  
+  @media (max-width: 768px) {
+    #dashboard .details {
+      grid-template-columns: 1fr;
+    }
+    .search{
+        position: relative;
+        max-width: 400px;
+        margin: 0 12px;
+    }
+    .user img{
+        width: 40px;
+        height: 40px;
+    }
+    td{
+        font-size: 12px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    #dashboard .cardBox {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    .cardHeader h2 {
+      font-size: 20px;
+    }
+    .navigation {
+        left: -250px;
+      }
+    .navigation.active {
+        width: 250px;
+        left: 0;
+    }
+    .main {
+        width: 100%;
+        left: 0;
+    }
+    .main.active {
+        left: 250px;
+    }
+    .user img{
+        width: 40px;
+        height: 40px;
+    }
+    .search{
+        position: relative;
+        width: 150px;
+        margin: 0 12px;
+    }
+    td{
+        font-size: 12px;
+    }
+  }
