Update for mobile version

--- a/CaseStudy_RarityNinja/sass/base/_utilities.scss
+++ b/CaseStudy_RarityNinja/sass/base/_utilities.scss
@@ -39,6 +39,10 @@
     @include respond(mobile) {
         padding: 3rem 2.4rem;
     }
+
+    @include respond(mobile) {
+        padding: 3rem 2rem;
+    }
 }
 
 .center-text {
