--- a/CaseStudy_RarityNinja/css/style.comp.css
+++ b/CaseStudy_RarityNinja/css/style.comp.css
@@ -146,6 +146,9 @@ button {
   @media only screen and (max-width: 576px) {
     .padding-all {
       padding: 3rem 2.4rem; } }
+  @media only screen and (max-width: 576px) {
+    .padding-all {
+      padding: 3rem 2rem; } }
 
 .center-text {
   text-align: center; }
@@ -266,7 +269,7 @@ button {
     box-shadow: 0 1rem 2rem rgba(35, 29, 79, 0.4); }
 
 .btn-switch, .btn-switch:link, .btn-switch:visited {
-  font-size: 1.2rem;
+  font-size: 12px;
   line-height: 1.62rem;
   padding: 1.4rem 2.8rem;
   border-radius: 49px;
@@ -509,7 +512,9 @@ button {
         width: 50%; } }
     @media only screen and (max-width: 768px) {
       .hero__content {
-        width: 100%; } }
+        width: 90%;
+        justify-items: center;
+        text-align: center; } }
   .hero__text {
     font-size: 1.8rem;
     color: #001129; }
@@ -638,7 +643,8 @@ button {
   @media only screen and (max-width: 768px) {
     .about__text {
       align-items: center;
-      text-align: center; } }
+      text-align: center;
+      width: 90%; } }
 
 .section-pricing {
   position: relative;
