--- a/CaseStudy_RarityNinja/sass/components/_button.scss
+++ b/CaseStudy_RarityNinja/sass/components/_button.scss
@@ -170,7 +170,7 @@
     &,
     &:link,
     &:visited {
-        font-size: 1.2rem;
+        font-size: 12px;
         line-height: 1.62rem;
         padding: 1.4rem 2.8rem;
         border-radius: 49px;
