--- a/CaseStudy_RarityNinja/sass/layout/_header.scss
+++ b/CaseStudy_RarityNinja/sass/layout/_header.scss
@@ -48,7 +48,9 @@
         }
 
         @include respond(large-mobile) {
-            width: 100%;
+            width: 90%;
+            justify-items: center;
+            text-align: center;
         }
     }
 
