--- a/CaseStudy_RarityNinja/sass/pages/_landingpage.scss
+++ b/CaseStudy_RarityNinja/sass/pages/_landingpage.scss
@@ -44,6 +44,7 @@
         @include respond(large-mobile) {
             align-items: center;
             text-align: center;
+            width: 90%;
         }
     }
 }
