--- a/CaseStudy_RarityNinja/sass/components/_button.scss
+++ b/CaseStudy_RarityNinja/sass/components/_button.scss
@@ -171,7 +171,7 @@
     &:link,
     &:visited {
         font-size: 12px;
-        line-height: 1.62rem;
+        line-height: 16.2px;
         padding: 1.4rem 2.8rem;
         border-radius: 49px;
         transition: all .2s;
