--- a/CaseStudy_RarityNinja/sass/base/_utilities.scss
+++ b/CaseStudy_RarityNinja/sass/base/_utilities.scss
@@ -7,26 +7,28 @@
 }
 
 .u-margin-bottom-big { 
-    margin-bottom: 6.4rem !important;
+    margin-bottom: 4rem !important;
 
-    @include respond(tablet) {
-        margin-bottom: 4rem !important;
-    }
-}
-.u-margin-bottom-medium { 
-    margin-bottom: 4rem !important; 
-   
     @include respond(tablet) {
         margin-bottom: 3rem !important;
     }
 }
+.u-margin-bottom-medium { 
+    margin-bottom: 2.4rem !important; 
+   
+    @include respond(tablet) {
+        margin-bottom: 2rem !important;
+    }
+}
 
-.u-margin-bottom-small { margin-bottom: 2.4rem !important;}
+.u-margin-bottom-small { margin-bottom: 1.6rem !important;}
 
-.u-margin-bottom-smallest { margin-bottom: 1rem !important;}
+.u-margin-bottom-smallest { margin-bottom: 0.8rem !important;}
 
+
+//About, Extension, Footer nav and logo
 .padding-all {
-    padding: 6rem 16rem;
+    padding: 8rem 16rem;
 
     @include respond(mini-desktop) {
         padding: 4rem 10rem;
