--- a/CaseStudy_RarityNinja/sass/components/_button.scss
+++ b/CaseStudy_RarityNinja/sass/components/_button.scss
@@ -58,13 +58,17 @@
         outline: none;
         box-shadow: 0 1rem 2rem rgba($color-black, .4);
     }
+
+    &__card {
+        padding: 1.6rem 2.4rem;
+    }
 }
 
 .btn-primer {
     &,
     &:link,
     &:visited {
-        padding: 1.8rem 2.4rem;
+        padding: 1.6rem 2.4rem;
         border-radius: 1.6rem;
         transition: all .2s;
         position: relative;
@@ -85,11 +89,12 @@
     }
 
     &__card {
-        padding: 1.2rem 2.4rem;
         transition: all .2s;
+        border: 1px solid rgba($color-grey-light-2, 0);
 
         &:hover {
             background-color: $color-yellow;
+            border: 1px solid rgba($color-grey-light-2, 0);
         }
     
         &:active,
