--- a/CaseStudy_RarityNinja/sass/layout/_footer.scss
+++ b/CaseStudy_RarityNinja/sass/layout/_footer.scss
@@ -31,9 +31,8 @@
     align-items: center;
     width: 100%;
     flex-direction: row;
-    border-top: 1px solid rgba($color-white, .1);
-    padding-top: 3.2rem;
-    padding-bottom: 3.2rem;
+    border-top: 1.5px solid rgba($color-white, .1);
+    padding: 3.2rem 16rem 4rem 16rem;
 
     & p {
         color: $color-white;
