--- a/CaseStudy_RarityNinja/sass/layout/_footer.scss
+++ b/CaseStudy_RarityNinja/sass/layout/_footer.scss
@@ -32,7 +32,20 @@
     width: 100%;
     flex-direction: row;
     border-top: 1.5px solid rgba($color-white, .1);
+
     padding: 3.2rem 16rem 4rem 16rem;
+
+    @include respond(mini-desktop) {
+        padding: 6rem 10rem;
+    }
+
+    @include respond(tablet) {
+        padding: 5rem 6.4rem;
+    }
+
+    @include respond(large-mobile) {
+        padding: 4rem 2.4rem;
+    }
 
     & p {
         color: $color-white;
