--- a/CaseStudy_RarityNinja/sass/layout/_header.scss
+++ b/CaseStudy_RarityNinja/sass/layout/_header.scss
@@ -10,7 +10,7 @@
     height: 9.6rem;
     padding: 2.4rem 6.4rem;
 
-    @include respond(mobile) {
+    @include respond(large-mobile) {
         padding: 24px 2.4rem;
     }
 
@@ -37,6 +37,21 @@
 
     padding: 2.9rem 12.4rem 7.1rem 16rem;
 
+    @include respond(mini-desktop) {
+        padding: 6rem 10rem;
+    }
+
+    @include respond(tablet) {
+        padding: 5rem 6.4rem;
+    }
+
+    @include respond(large-mobile) {
+        padding: 4rem 2.4rem;
+        flex-direction: column;
+        height: min-content;
+    }
+
+    
     
     &__content {
         display: grid;
@@ -177,8 +192,4 @@
         }
     }
 
-    @include respond(large-mobile) {
-        flex-direction: column;
-        height: min-content;
-    }
 }
