--- a/CaseStudy_RarityNinja/sass/pages/_landingpage.scss
+++ b/CaseStudy_RarityNinja/sass/pages/_landingpage.scss
@@ -55,6 +55,18 @@
     align-items: center;
     flex-direction: column;
     padding: 8.8rem 25.6rem;
+
+    @include respond(mini-desktop) {
+        padding: 6rem 10rem;
+    }
+
+    @include respond(tablet) {
+        padding: 5rem 6.4rem;
+    }
+
+    @include respond(large-mobile) {
+        padding: 4rem 2.4rem;
+    }
 }
 
 .pricing {
