--- a/CaseStudy_RarityNinja/css/style.comp.css
+++ b/CaseStudy_RarityNinja/css/style.comp.css
@@ -272,19 +272,22 @@ button {
 .btn-switch, .btn-switch:link, .btn-switch:visited {
   font-size: 12px;
   line-height: 16.2px;
+  font-weight: 400;
   padding: 1.4rem 2.8rem;
   border-radius: 49px;
   transition: all .2s;
   position: relative;
   cursor: pointer;
-  color: #2A85FF;
+  color: rgba(0, 35, 82, 0.7);
   background-color: transparent;
   border: none; }
 
 .btn-switch:active, .btn-switch:focus, .btn-switch--active {
   outline: none;
+  font-weight: 500;
+  color: #2A85FF;
   background-color: #fff;
-  box-shadow: 0 0.5rem 1rem rgba(35, 29, 79, 0.1);
+  box-shadow: 0 0.2rem 1.6rem rgba(0, 35, 82, 0.08);
   border: none; }
 
 .btn-footer, .btn-footer:link, .btn-footer:visited {
@@ -385,13 +388,14 @@ button {
 .logo {
   display: flex;
   align-items: center;
-  flex-direction: row; }
+  flex-direction: row;
+  gap: 8px; }
   .logo__icon {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #001129;
+    background-color: #002352;
     height: 22px;
     width: 22px;
     padding: 4px;
@@ -404,8 +408,7 @@ button {
   .logo__name {
     font-size: 20px;
     line-height: 28px;
-    font-weight: 700;
-    margin-left: 8px; }
+    font-weight: 700; }
     @media only screen and (max-width: 576px) {
       .logo__name {
         margin-left: 4px; } }
@@ -507,6 +510,23 @@ button {
     @media only screen and (max-width: 992px) {
       .navigation__list {
         gap: 1rem; } }
+  .navigation__toggle {
+    position: relative;
+    align-self: center;
+    width: 0;
+    height: 0; }
+    @media only screen and (max-width: 576px) {
+      .navigation__toggle {
+        width: 4rem;
+        height: 100%; } }
+
+.toggle {
+  width: 100%;
+  height: 100%; }
+  .toggle__menu {
+    display: none; }
+  .toggle__close {
+    display: none; }
 
 .hero {
   display: flex;
@@ -543,7 +563,8 @@ button {
       .hero__content {
         width: 100%;
         justify-items: center;
-        text-align: center; } }
+        text-align: center;
+        margin-bottom: 4rem; } }
   .hero__text {
     font-size: 1.8rem;
     color: #001129; }
