--- a/CaseStudy_RarityNinja/sass/components/_button.scss
+++ b/CaseStudy_RarityNinja/sass/components/_button.scss
@@ -177,12 +177,13 @@
     &:visited {
         font-size: 12px;
         line-height: 16.2px;
+        font-weight: 400;
         padding: 1.4rem 2.8rem;
         border-radius: 49px;
         transition: all .2s;
         position: relative;
         cursor: pointer;
-        color: $color-secondary-dark;
+        color: rgba($color-primary-light, .7);
         background-color: transparent;
         border: none;
     }
@@ -191,8 +192,10 @@
     &:focus,
     &--active {
         outline: none;
+        font-weight: 500;
+        color: $color-secondary-dark;
         background-color: $color-white;
-        box-shadow: 0 .5rem 1rem rgba($color-black, .1);
+        box-shadow: 0 .2rem 1.6rem rgba($color-primary-light, .08);
         border: none;
     }
 }
