--- a/CaseStudy_RarityNinja/sass/layout/_header.scss
+++ b/CaseStudy_RarityNinja/sass/layout/_header.scss
@@ -26,6 +26,31 @@
             gap: 1rem;
         }
     }
+
+    &__toggle {
+        position: relative;
+        align-self: center;
+        width: 0;
+        height: 0;
+
+        @include respond(mobile) {
+            width: 4rem;
+            height: 100%;
+        }
+    }
+}
+
+.toggle {
+    width: 100%;
+    height: 100%;
+
+    &__menu {
+        display: none;
+    }
+
+    &__close {
+        display: none;
+    }
 }
 
 .hero {
@@ -76,6 +101,7 @@
             width: 100%;
             justify-items: center;
             text-align: center;
+            margin-bottom: 4rem;
         }
     }
 
