--- a/CaseStudy_RarityNinja/sass/layout/_header.scss
+++ b/CaseStudy_RarityNinja/sass/layout/_header.scss
@@ -25,31 +25,61 @@
         @include respond(tablet) {
             gap: 1rem;
         }
+
+        @include respond(mobile) {
+            z-index: 100;
+            background-color: $color-primary-light;
+            position: fixed;
+            width: 60vw;
+            height: 100vh;
+
+            display: flex;
+            align-items: flex-start;
+            flex-direction: column;
+            right: 0;
+            top: 0;
+            padding: 24px 24px 0 0;
+
+            transition: all .5s;
+
+            & button {
+                color: $color-white;
+                border: none;
+            }
+        }
     }
 
     &__toggle {
         position: relative;
         align-self: center;
-        width: 0;
-        height: 0;
+        display: none;
 
         @include respond(mobile) {
             width: 4rem;
-            height: 100%;
+            height: 100;
+            display: block;
         }
     }
 }
 
 .toggle {
-    width: 100%;
-    height: 100%;
+    display: none;
+
 
     &__menu {
-        display: none;
+        width: 4rem;
+        height: 4rem;
+        display: block;
     }
 
     &__close {
-        display: none;
+        fill: $color-white;
+        stroke: $color-white;
+        align-self: end;
+        width: 2.5rem;
+        height: 2.5rem;
+        display: block;
+        margin-bottom: 2rem;
     }
 }
 
