--- a/CaseStudy_RarityNinja/sass/layout/_header.scss
+++ b/CaseStudy_RarityNinja/sass/layout/_header.scss
@@ -36,7 +36,7 @@
             display: flex;
             align-items: flex-start;
             flex-direction: column;
-            right: 0;
+            right: -60vw;
             top: 0;
             padding: 24px 24px 0 0;
 
