--- a/CaseStudy_RarityNinja/sass/layout/_header.scss
+++ b/CaseStudy_RarityNinja/sass/layout/_header.scss
@@ -45,6 +45,7 @@
             & button {
                 color: $color-white;
                 border: none;
+                font-size: 12px;
             }
         }
     }
